Fix for hovercard width on narrow screens

--- a/bookface_light_userstyles.css
+++ b/bookface_light_userstyles.css
@@ -1,8 +1,8 @@
 /*
 	Name	   : Bookface Light User Styles
-	Version    : 1.5.19
+	Version    : 1.5.20
     Licence    : AGPL
-    Created on : 20 Mar 2025
+    Created on : 22 Mar 2025
     Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
     
 	This "user styles" stylesheet will override Friendica and style it more like Facebook.
@@ -2610,6 +2610,9 @@ body.mod-settings #delegation .contact-block-img {
 	ul.nav-tabs li.active a {
 		background-color: var(--link-color) !important;
 		color: #fff !important;
+	}
+	.hovercard {
+		max-width: 100% !important;
 	}
 }
 /* 	Narrow Screen Phones in Landscape Orientation
